# jrpg-game-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: asset_manager.hpp  character_creation_state.hpp  game.hpp  intro_state.hpp  menu_state.hpp  play_state.hpp  singleton.hpp  state.hpp  state_machine.hpp  tile.hpp  tile_map.hpp  tile_map_layer.hpp  tile_map_parser.hpp  tilemap_parser.hpp
include/utility/: non_copyable.hpp  non_moveable.hpp
res/maps/: map_001.csv  map_002.csv  some_map_Deco.csv  some_map_Ground.csv  some_map_Houses.csv  some_map_Lights.csv  some_map_Top.csv  some_map_Trees.csv
src/: asset_manager.cpp  character_creation_state.cpp  game.cpp  intro_state.cpp  main.cpp  menu_state.cpp  play_state.cpp  state_machine.cpp  tile.cpp  tile_map.cpp  tile_map_layer.cpp  tile_map_parser.cpp  tilemap_parser.cpp
